# otus-ma-k8s

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  send-request.sh
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/echo/: __main__.py
